--- a/styles/main.scss
+++ b/styles/main.scss
@@ -18,3 +18,11 @@ html, body {
 .absolute {
   position: absolute;
 }
+
+.base-page {
+  padding-top: 150px;
+}
+
+.clickable {
+  cursor: pointer;
+}
