--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,11 +1,17 @@
 @import './shared/fonts';
 @import './index';
-@import './shared/header';
+@import './header';
+
+
 
 html, body {
   height:100%;
   width:100%;
   font-family: 'Montserrat', 'Helvetica';
+}
+
+.layout-container {
+  height: 100% !important;
 }
 
 .self-typed {
@@ -19,8 +25,25 @@ html, body {
   position: absolute;
 }
 
+.error {
+  font-weight: 700;
+  color: red;
+}
+
 .base-page {
-  padding-top: 150px;
+  padding: 150px 0 100px 0;
+  color: black;
+  background-color: #ecedee;
+  min-height: 100vh;
+
+  .page-header {
+    .page-header-title {
+      font-weight: 700;
+      color: black;
+      display: inline-block;
+      margin-bottom: 20px;
+    }
+  }
 }
 
 .clickable {
